--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
     <div class="prst" >
 
-      <img src="https://cdn.discordapp.com/avatars/967870424178368522/a871ae3b4564b7fc4885073f89aadca5.webp" alt="Photo De Profil" width="200px" height="200px">
+      <img src="./img/be5c1db85376cb9939a673f038b31533.webp" alt="Photo De Profil" width="200px" height="200px">
       <h1 class="welltag">Welltag</h1>
       <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
       
       <div class="text-box"><h1><span class="auto-input"></span></h1>
         <script>
           let typed = new Typed(".auto-input", {
-            strings: ["Développeur", "Web", "Frontend", "Passionné",],
+            strings: ["Développeur", "Web", "Full-Stack", "Passionné",],
             typeSpeed: 100,
             backSpeed: 100,
             loop: true
@@ -91,15 +91,7 @@
 
     <div id="projectlist">
 
-      <figure class="projets hover">  <!--Pi-Heberg-->
-        <img src="./img/blanc.png">
-        <figcaption>
-          <img src="./img/Logo_pi.png" alt="Logo Pi" class="profile" />
-          <h2>Pi-Heberg<span>Support & CM</span></h2>
-          <p>Pi-Heberg est un hébergement Web, gaming, vps à bas prix voir gratuit !</p>
-          <a href="https://pi-heberg.fr" class="info">Site Web</a>
-        </figcaption>
-      </figure>
+     
   
       <figure class="projets"> <!--CMFR-->
         <img src="./img/Banniere_CMFr.png" alt="Bannière CMFr" />
